# teacher_helper

./: .exrc  .gitignore  .pylintrc  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  auto_grade.py  clickthrough.py  debug.py  documentation.tf  email_template.html  main.py  main_snippets.py  mkdocs.yml  notes.txt  other.py  pyproject.toml  requirements.docs.txt  requirements.txt  setup.cfg  setup.py  shell  shell.py  todo.md  update_reports.py  urls_from_assignment.py
.github/workflows/: ci_cd.yml
ClassroomAutomator/: __init__.py  automator.py
docs/: CORE.md  EMAIL.md  changelog.md  contributing.md  grader.md  index.md  setup.md  sis.md
docs/docx/: rubric_writer.md
docs/google/: classroom_grader.md  classroom_wrapper.md  client.md  entities.md
helper/: __init__.py  assignment_submissions.py  csv_parser.py  csv_parsers.py  email.py  genesis.py  helper.py  homeroom.py  imap.py  json_parsers.py  meta_groups.py  parent_guardian.py  paychex.py  soundtrap.py  student.py  templates.py  urls_from_assignment.py  zoom_attendance_report.py
helper/ClassroomAutomator/: __init__.py  auto_grade.py  (+4 more)
paychex/: README.md  __init__.py  email_otp.py  imap.py  paychex.py  util.py
pyautogc/: __init__.py  auto_grade.py  automator.py  exceptions.py  feedback_view.py  xpaths.py
scripts/: git_describe.sh
sparta_helper/: README.md  __init__.py  __main__.py  assignment_submissions.py  atc.py  csv_parsers.py  docx_utils.py  genesis.py  group.py  helper.py  homeroom.py  json_parsers.py  meta_groups.py  student.py  templates.py
teacherHelper/: __init__.py  email.py  email_.py  entities.py  group.py  helper.py  homeroom.py  manual_zoom_matches.py  parent_guardian.py  paychex.py  student.py  zoom_attendance_report.py
teacher_helper/: __init__.py  __main__.py  email_.py  helper.py  oncourse_mixin.py
teacherhelper/: __init__.py  __main__.py  _data_dir.py  default_email_template.html  email_.py  helper.py  oncourse_mixin.py
zoom_attendance/: rename.py
(+65 files in other folders)
