[metadata]
name = teacherhelper
version = 0.0.5a1
author = Jack DeVries
author_email = jdevries3133@gmail.com
description = Useful abstractions and CLI to make teaching more scriptable.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdevries3133/teacher_helper/
project_urls =
    Bug Tracker = https://github.com/jdevries3133/teacher_helper/issues/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    beautifulsoup4
    lxml
    fuzzywuzzy
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    th = teacherhelper.__main__:main
