[metadata]
name = teacherhelper
author = Jack DeVries
author_email = jdevries3133@gmail.com
description = Useful abstractions and CLI to make teaching more scriptable.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdevries3133/teacher_helper/
project_urls =
    Bug Tracker = https://github.com/jdevries3133/teacher_helper/issues/
    Documentation = https://teacherhelper.jackdevries.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
setup_tools_git_versioning = true
setup_requires = ["setuptools-git-versioning"]

[options]
install_requires =
    beautifulsoup4
    lxml
    fuzzywuzzy
    markdown
    python-docx
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .
exclude = ["venv", ".terraform"]

[options.entry_points]
console_scripts =
    th = teacherhelper.__main__:main
